# streaming-bytestring

./: .travis.yml  ChangeLog.md  LICENSE  README.md  bytestring-streaming.cabal  streaming-bytestring.cabal
Data/Attoparsec/ByteString/: Streaming.hs
Data/ByteString/: Streaming.hs
Data/ByteString/Streaming/: Aeson.hs  Attoparsec.hs  Char8.hs  HTTP.hs  Internal.hs
Data/ByteString/Streaming/Internal/: Type.hs
Data/Text/: Streaming.hs
bench/: benchbuilders.hs  benchio.hs  benchlines.hs
examples/: HttpGet.hs  shell.hs
tests/: test.hs
