name:                streaming-bytestring
version:             0.1.0.0
synopsis:            Effectful sequences of bytes.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.Streaming
                       , Data.ByteString.Streaming.Char8
                       , Data.ByteString.Streaming.Internal
                       , Data.ByteString.Streaming.Attoparsec
                       , Data.ByteString.Streaming.Aeson
                       , Data.ByteString.Streaming.HTTP
  -- other-modules:       
  other-extensions:    CPP, BangPatterns, ForeignFunctionInterface, DeriveDataTypeable, Unsafe
  build-depends:       base >=4.8 && <4.9
                     , bytestring >=0.10 && <0.11
                     , deepseq >=1.4 && <1.5
                     , syb >=0.5 && <0.6
                     , mtl >=2.2 && <2.3
                     , mmorph >=1.0 && <1.1
                     , attoparsec
                     , transformers
                     , foldl
                     , aeson
                     , streaming
                     , http-client 
                     , http-client-tls
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -O2